At start, initialize with 100+ addresses, to fix slow loading on Safari mac.

--- a/style.css
+++ b/style.css
@@ -48,11 +48,7 @@ h1 {
   If light mode, change body background color
 */
 [data-theme="light"] body {
-  background: linear-gradient(
-    112.1deg,
-    rgb(255, 255, 255) 11.4%,
-    Whitesmoke 70.2%
-  );
+  background: linear-gradient(112.1deg, WhiteSmoke 11.4%, MintCream 70.2%);
 }
 /*
   If light mode, change h1 color
